--- a/login.htm
+++ b/login.htm
@@ -140,7 +140,7 @@
         const pass = (passwordInput.value || '').trim();
 
         // simple client-side check
-        if (user === 'admin' && pass === 'admin') {
+        if (user === 'autoQAGFT' && pass === 'admin') {
           // login success -> navigate to home
           hideError();
           // Use location.href to go to home.htm (file should be in the same folder)
